Problem: crate doesn't compile against latest pgx
Solution: upgrade to pgx 0.7.1

I've reduced the amount of coverage available for checked commands to
cover sub-transactions only until a better solution is found. The
problem right now is it it's hard to recover the parent. Previously
this was more feasible when SpiClient didn't need to be available
mutably.

This should solve cases it's being used for.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ msrv = "1.65"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pgx = "0.6.1"
+pgx = "0.7.1"
+thiserror = "1.0.38"
 
 [features]
 default = []
